src/iac/terraform-vault-wiremock-mysql-spark-testrunner/terraformSecurityGroupVault.tf
resource "aws_security_group" "vault" {
  name        = "Vault Security Group"
  description = "Vault Security Group"
  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  ingress {
    protocol  = "tcp"
    from_port = 8200
    to_port   = 8200
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  tags = {
    Name = "Mysql Security Group"
  }
}
