src/iac/terraform-vault-wiremock-mysql-spark-testrunner/terraformSecurityGroupWiremock.tf
resource "aws_security_group" "wiremock" {
  name        = "Wiremock Security Group"
  description = "Wiremock Security Group"
  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  ingress {
    protocol  = "tcp"
    from_port = 9001
    to_port   = 9001
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  tags = {
    Name = "Wiremock Security Group"
  }
}
